# common/api/connector/v1/callback.pb.validate.go
@@ -1,5 +1,5 @@
 // Code generated by protoc-gen-validate. DO NOT EDIT.
-// source: connector/v1/health.proto
+// source: connector/v1/callback.proto
 
 package v1
 
@@ -655,3 +655,235 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = SessionReplyValidationError{}
+
+// Validate checks the field values on SendRequest with the rules defined in
+// the proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *SendRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on SendRequest with the rules defined in
+// the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in SendRequestMultiError, or
+// nil if none found.
+func (m *SendRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *SendRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	for idx, item := range m.GetMessages() {
+		_, _ = idx, item
+
+		if all {
+			switch v := interface{}(item).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, SendRequestValidationError{
+						field:  fmt.Sprintf("Messages[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, SendRequestValidationError{
+						field:  fmt.Sprintf("Messages[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return SendRequestValidationError{
+					field:  fmt.Sprintf("Messages[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	if len(errors) > 0 {
+		return SendRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// SendRequestMultiError is an error wrapping multiple validation errors
+// returned by SendRequest.ValidateAll() if the designated constraints aren't met.
+type SendRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m SendRequestMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m SendRequestMultiError) AllErrors() []error { return m }
+
+// SendRequestValidationError is the validation error returned by
+// SendRequest.Validate if the designated constraints aren't met.
+type SendRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e SendRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e SendRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e SendRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e SendRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e SendRequestValidationError) ErrorName() string { return "SendRequestValidationError" }
+
+// Error satisfies the builtin error interface
+func (e SendRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sSendRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = SendRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = SendRequestValidationError{}
+
+// Validate checks the field values on SendReply with the rules defined in the
+// proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *SendReply) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on SendReply with the rules defined in
+// the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in SendReplyMultiError, or nil
+// if none found.
+func (m *SendReply) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *SendReply) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	if len(errors) > 0 {
+		return SendReplyMultiError(errors)
+	}
+
+	return nil
+}
+
+// SendReplyMultiError is an error wrapping multiple validation errors returned
+// by SendReply.ValidateAll() if the designated constraints aren't met.
+type SendReplyMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m SendReplyMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m SendReplyMultiError) AllErrors() []error { return m }
+
+// SendReplyValidationError is the validation error returned by
+// SendReply.Validate if the designated constraints aren't met.
+type SendReplyValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e SendReplyValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e SendReplyValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e SendReplyValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e SendReplyValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e SendReplyValidationError) ErrorName() string { return "SendReplyValidationError" }
+
+// Error satisfies the builtin error interface
+func (e SendReplyValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sSendReply.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = SendReplyValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = SendReplyValidationError{}
